2000-09-12  Pablo Saratxaga <pablo@mandrakesoft.com>

	* sp.po,sr.po: Updated Serbian files

2000-09-12  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* ja.po: Updated Japanese translation.

2000-09-09  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2000-09-10  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* it.po: updated italian translation

2000-09-08  Jesus Bravo Alvarez  <jba@pobox.com>

	* gl.po: Updated Galician translation.

2000-09-08  Christian Meyer  <linux@chrisime.de>

	* de.po: Updated German translation.

2000-09-05  Simos Xenitellis  <simos@hellug.gr>

	* el.po: Updated Greek translation.

2000-09-04  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2000-09-04  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-09-03  Andreas Hyden  <a.hyden@cyberpoint.se>

	* sv.po: Updated Swedish translation.

2000-09-02  Stanislav Brabec  <utx@penguin.cz>

        * po/cs.po: Typos fixed.

2000-09-01  Andreas Hyden <a.hyden@cyberpoint.se>

	* sv.po: Updated Swedish translation.

2000-08-30  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2000-08-29  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-24  Manuel de Vega Barreiro <barreiro@arrakis.es>

	* es.po: Updated Spanish translation.

2000-08-23  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* ja.po: Updated Japanese translation.

2000-08-18  Pablo Saratxaga <pablo@mandrakesoft.com>

	* ca.po,eu.po: Updated Catalan and Basque files

2000-08-17  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* it.po: updated Italian translation.

2000-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2000-08-16  Benedikt Roth  <Benedikt.Roth@gmx.net>

	* de.po: Updated German translation.

2000-08-13  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* POTFILES.in: added missing file.
