@@ -1,3 +1,8 @@
+2000-09-13  Christian Meyer  <linux@chrisime.de>
+
+	* update.pl: Added perl script from kanikus.
+	* README.tools: Added text file.
+	
 2000-09-12  Pablo Saratxaga <pablo@mandrakesoft.com>
 
 	* sp.po,sr.po: Updated Serbian files
